-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 17, 18
-
Component/s: hotspot
-
b18
-
x86_64
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8275043 | 17.0.2 | Tobias Hartmann | P3 | Resolved | Fixed | b03 |
The following test failed in the JDK18 CI:
applications/runthese/RunThese30M.java
Here's a snippet from the log file:
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/mach5/mesos/work_dir/slaves/ff806ead-2cac-495d-9cbc-62116f99bf14-S14127/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/746347b9-9223-414d-9ead-3b7a2b870188/runs/01306816-de37-49bf-906c-342650ce7894/workspace/open/src/hotspot/share/opto/gcm.cpp:766), pid=31424, tid=31440
# assert(!LCA_orig->dominates(pred_block) || early->dominates(pred_block)) failed: early is high enough
#
# JRE version: Java(TM) SE Runtime Environment (18.0+17) (fastdebug build 18-ea+17-984)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 18-ea+17-984, compiled mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0xd188d5] PhaseCFG::insert_anti_dependences(Block*, Node*, bool)+0x1895
#
# Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /opt/mach5/mesos/work_dir/slaves/ff806ead-2cac-495d-9cbc-62116f99bf14-S13973/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/01f3c21f-3d7f-451d-a68d-df11c4eeb5ed/runs/837f014e-5a4c-47b1-9fb1-856e452f4d72/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_runthese_RunThese30M_java/scratch/0/core.31424)
#
# JFR recording file will be written. Location: /opt/mach5/mesos/work_dir/slaves/ff806ead-2cac-495d-9cbc-62116f99bf14-S13973/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/01f3c21f-3d7f-451d-a68d-df11c4eeb5ed/runs/837f014e-5a4c-47b1-9fb1-856e452f4d72/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_runthese_RunThese30M_java/scratch/0/hs_err_pid31424.jfr
#
Unsupported internal testing APIs have been used.
# An error report file with more information is saved as:
# /opt/mach5/mesos/work_dir/slaves/ff806ead-2cac-495d-9cbc-62116f99bf14-S13973/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/01f3c21f-3d7f-451d-a68d-df11c4eeb5ed/runs/837f014e-5a4c-47b1-9fb1-856e452f4d72/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_runthese_RunThese30M_java/scratch/0/hs_err_pid31424.log
#
# Compiler replay data is saved as:
# /opt/mach5/mesos/work_dir/slaves/ff806ead-2cac-495d-9cbc-62116f99bf14-S13973/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/01f3c21f-3d7f-451d-a68d-df11c4eeb5ed/runs/837f014e-5a4c-47b1-9fb1-856e452f4d72/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_runthese_RunThese30M_java/scratch/0/replay_pid31424.log
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
----------System.err:(1076/75173)----------
Here's the crashing thread's stack:
--------------- T H R E A D ---------------
Current thread (0x00007f437827f970): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=31440, stack(0x00007f43284f9000,0x00007f43285fa000)]
Current CompileTask:
C2: 538830 63738 !b 4 jdk.jfr.internal.JVMUpcalls::onRetransform (188 bytes)
Stack: [0x00007f43284f9000,0x00007f43285fa000], sp=0x00007f43285f46b0, free space=1005k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xd188d5] PhaseCFG::insert_anti_dependences(Block*, Node*, bool)+0x1895
V [libjvm.so+0xd1f78b] PhaseCFG::schedule_late(VectorSet&, Node_Stack&)+0xc7b
V [libjvm.so+0xd1ffc5] PhaseCFG::global_code_motion()+0x325
V [libjvm.so+0xd241e1] PhaseCFG::do_global_code_motion()+0x51
V [libjvm.so+0x9f99b3] Compile::Code_Gen()+0x293
V [libjvm.so+0xa05ee8] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, bool, DirectiveSet*)+0x1678
V [libjvm.so+0x81ea56] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x646
V [libjvm.so+0xa16119] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xc39
V [libjvm.so+0xa16d78] CompileBroker::compiler_thread_loop()+0x518
V [libjvm.so+0x18911ac] JavaThread::thread_main_inner()+0x27c
V [libjvm.so+0x1897750] Thread::call_run()+0x100
V [libjvm.so+0x1575494] thread_native_entry(Thread*)+0x104
applications/runthese/RunThese30M.java
Here's a snippet from the log file:
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/mach5/mesos/work_dir/slaves/ff806ead-2cac-495d-9cbc-62116f99bf14-S14127/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/746347b9-9223-414d-9ead-3b7a2b870188/runs/01306816-de37-49bf-906c-342650ce7894/workspace/open/src/hotspot/share/opto/gcm.cpp:766), pid=31424, tid=31440
# assert(!LCA_orig->dominates(pred_block) || early->dominates(pred_block)) failed: early is high enough
#
# JRE version: Java(TM) SE Runtime Environment (18.0+17) (fastdebug build 18-ea+17-984)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 18-ea+17-984, compiled mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0xd188d5] PhaseCFG::insert_anti_dependences(Block*, Node*, bool)+0x1895
#
# Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /opt/mach5/mesos/work_dir/slaves/ff806ead-2cac-495d-9cbc-62116f99bf14-S13973/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/01f3c21f-3d7f-451d-a68d-df11c4eeb5ed/runs/837f014e-5a4c-47b1-9fb1-856e452f4d72/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_runthese_RunThese30M_java/scratch/0/core.31424)
#
# JFR recording file will be written. Location: /opt/mach5/mesos/work_dir/slaves/ff806ead-2cac-495d-9cbc-62116f99bf14-S13973/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/01f3c21f-3d7f-451d-a68d-df11c4eeb5ed/runs/837f014e-5a4c-47b1-9fb1-856e452f4d72/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_runthese_RunThese30M_java/scratch/0/hs_err_pid31424.jfr
#
Unsupported internal testing APIs have been used.
# An error report file with more information is saved as:
# /opt/mach5/mesos/work_dir/slaves/ff806ead-2cac-495d-9cbc-62116f99bf14-S13973/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/01f3c21f-3d7f-451d-a68d-df11c4eeb5ed/runs/837f014e-5a4c-47b1-9fb1-856e452f4d72/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_runthese_RunThese30M_java/scratch/0/hs_err_pid31424.log
#
# Compiler replay data is saved as:
# /opt/mach5/mesos/work_dir/slaves/ff806ead-2cac-495d-9cbc-62116f99bf14-S13973/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/01f3c21f-3d7f-451d-a68d-df11c4eeb5ed/runs/837f014e-5a4c-47b1-9fb1-856e452f4d72/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_runthese_RunThese30M_java/scratch/0/replay_pid31424.log
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
----------System.err:(1076/75173)----------
Here's the crashing thread's stack:
--------------- T H R E A D ---------------
Current thread (0x00007f437827f970): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=31440, stack(0x00007f43284f9000,0x00007f43285fa000)]
Current CompileTask:
C2: 538830 63738 !b 4 jdk.jfr.internal.JVMUpcalls::onRetransform (188 bytes)
Stack: [0x00007f43284f9000,0x00007f43285fa000], sp=0x00007f43285f46b0, free space=1005k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xd188d5] PhaseCFG::insert_anti_dependences(Block*, Node*, bool)+0x1895
V [libjvm.so+0xd1f78b] PhaseCFG::schedule_late(VectorSet&, Node_Stack&)+0xc7b
V [libjvm.so+0xd1ffc5] PhaseCFG::global_code_motion()+0x325
V [libjvm.so+0xd241e1] PhaseCFG::do_global_code_motion()+0x51
V [libjvm.so+0x9f99b3] Compile::Code_Gen()+0x293
V [libjvm.so+0xa05ee8] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, bool, DirectiveSet*)+0x1678
V [libjvm.so+0x81ea56] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x646
V [libjvm.so+0xa16119] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xc39
V [libjvm.so+0xa16d78] CompileBroker::compiler_thread_loop()+0x518
V [libjvm.so+0x18911ac] JavaThread::thread_main_inner()+0x27c
V [libjvm.so+0x1897750] Thread::call_run()+0x100
V [libjvm.so+0x1575494] thread_native_entry(Thread*)+0x104
- backported by
-
JDK-8275043 RunThese30M.java failed "assert(!LCA_orig->dominates(pred_block) || early->dominates(pred_block)) failed: early is high enough"
-
- Resolved
-
- relates to
-
JDK-8274074 SIGFPE with C2 compiled code with -XX:+StressGCM
-
- Resolved
-
- links to
-
Commit
openjdk/jdk17u/500ed35c
-
Commit
openjdk/jdk/dfc557cb
-
Review
openjdk/jdk17u/173
-
Review
openjdk/jdk/5747
(1 links to)