8274406: RunThese30M.java failed "assert(!LCA_orig->dominates(pred_block) || early->dominates(pred_block)) failed: early is high enough"

Backport-of: dfc557cbea342b2991f9d129235470ac789b50a2